--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -1,3 +1,14 @@
 #app {
   padding: 20px;
 }
+
+#address-list {
+  width: 300px;
+  float: left;
+  margin-right: 20px;
+}
+
+#address {
+  width: 500px;
+  float: left;
+}
